# Otherworldly-Creation

./: .eslintrc.js  .eslintrc.reference.js  .gitignore  APPLE_SIGNING_SETUP.md  CLAUDE.md  ENHANCED_AI_WRITING_SYSTEM_GUIDE.md  INSTALLATION_GUIDE.md  MACOS_PKG_BYPASS_GUIDE.md  MANUAL_TESTING_GUIDE.md  OLLAMA_FIX_SUMMARY.md  README.md  README_CI.md  README_INSTALL.md  RELEASE_CHECKLIST.md  Sniffly使用手冊.md  TAILWIND_V4_UPGRADE_LOG.md  TAURI-MIGRATION.md  VISUAL_CREATION_CENTER_ARCHITECTURE.md  build.js  character_consistency_tracker.rs  check_system_db.rs  context_comparison_report.json  context_engineering_test_report.md  enhanced_context_models.rs  eslint-report.json  forge.config.js  forge.config.js.temp  init-db.sh  install-test-deps.js  integrated_ai_writing_system.rs  intelligent_context_manager.rs  jest.config.js  manual_test_script.js  manual_test_script_fixed.js  ollama_chat_example.rs  optimized_context_example.txt  package-lock.json  package.json  plot_coherence_system.rs  readmd.md  (+13 more)
.claude/: settings.local.json
.github/: RELEASE_GUIDE.md
.github/workflows/: build-and-release.yml  debug-windows.yml  env-setup.yml  release-signed.yml  release.yml  test-build.yml
.stats/: README_backup_1755966382736.md  README_backup_1755967628158.md  history.json  latest.json  pre-release-check_1755966441432.json  readme-format.json  readme_update_1755966382747.json  readme_update_1755967628168.json  stats_2025-08-23_16-26-22.json
assets/: app-info.json
docs/: ESLINT_CONFIGURATION_GUIDE.md  ESLINT_QUICK_REFERENCE.md  README.md  context-engineering-metrics.md
electron/main/: main.ts  preload.ts
electron/main/__tests__/database/: database.test.ts
electron/main/__tests__/integration/: e2e.test.ts  performance.test.ts
electron/main/__tests__/services/: contextManager.test.ts  databaseMaintenance.test.ts  updateService.test.ts
electron/main/database/: database.ts
electron/main/ipc/: basicHandlers.ts  ipcHandlers.ts
electron/main/ipc/handlers/: chapterHandlers.ts  projectHandlers.ts  utils.ts
electron/main/services/: contextManager.ts  databaseMaintenance.ts  ollamaService.ts  updateService.ts
new-icons/: icon.icns
pkg-analysis/: PackageInfo
pkg_debug/download_pkg_debug/: Bom  PackageInfo
scripts/: code-stats.js  create-pkg.sh  diagnostic.js  fix-eslint.sh  git-hooks-setup.sh  manual-package.js  optimize-resources.js  pre-release-check.js  quick-install.js  readme-updater.js  release.js  security-check.sh  simple-package.js  sync-version.js  test-release-flow.sh  version-sync.js
scripts/pkg-scripts/: postinstall
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  ai_history.rs  ai_providers.rs  batch_illustration.rs  chapter.rs  character.rs  context.rs  database.rs  epub.rs  illustration.rs  mod.rs  pdf.rs  pdf_chrome.rs  project.rs  prompt_templates.rs  settings.rs  system.rs  translation.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/services/: mod.rs  ollama.rs
src-tauri/src/services/ai_providers/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  security.rs  trait.rs
src-tauri/src/services/context/: mod.rs  ultra_long_context_optimizer.rs
src-tauri/src/services/illustration/: batch_manager.rs  character_consistency.rs  illustration_manager.rs  imagen_api.rs  mod.rs  pollinations_api.rs  seed_manager.rs  style_resolver.rs  visual_traits.rs
src-tauri/src/services/translation/: mod.rs  prompt_optimizer.rs  prompt_templates.rs  translation_engine.rs  vocabulary_database.rs
src-tauri/src/utils/: language_purity.rs  mod.rs
src/__tests__/integration/: context-engineering.test.ts  setup.ts
src/assets/: .gitkeep
src/main/: main.ts  preload.ts
src/main/database/: database.ts
src/main/ipc/: aiHandlers.ts  ipcHandlers.ts  updateHandlers.ts
src/main/ipc/handlers/: index.ts
src/main/services/: contextManager.ts  databaseMaintenance.ts  ollamaService.ts  updateService.ts
src/main/tests/: contextManagerTest.ts  ollamaServiceTest.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  build-info.json  index.css  index.css.v3.backup  main-final.tsx  main-mvp.tsx  main-simple.tsx  main-stable.tsx  main-test.tsx  main.tsx
test-pkg-debug/expanded/: Bom  PackageInfo
test-pkg/expanded/: Bom
test-pkg/expanded/Scripts/: preinstall
(+338 files in other folders)
