[package]
name = "genesis-chronicle"
version = "1.0.3"
description = "創世紀元：異世界創作神器 - Tauri 版本"
authors = ["Genesis Chronicle Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "genesis_chronicle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1.10"
async-trait = "0.1"
base64 = "0.21"
aes-gcm = "0.10"
html-escape = "0.2"
# EPUB generation dependencies
zip = "0.6"
tempfile = "3.8"
mime_guess = "2.0"
# PDF generation dependencies
printpdf = "0.7"
