[package]
name = "genesis-chronicle"
version = "1.1.1"
description = "創世紀元：異世界創作神器 - Tauri 版本"
authors = ["Genesis Chronicle Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "genesis_chronicle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1"
regex = "1.10"
async-trait = "0.1"
base64 = "0.21"
lazy_static = "1.4"
aes-gcm = "0.10"
html-escape = "0.2"
# EPUB generation dependencies
zip = "0.6"
tempfile = "3.8"
mime_guess = "2.0"
# PDF generation dependencies - 全部移除，現在使用Chrome Headless
# printpdf, lopdf, image 等依賴已刪除 - Chrome Headless不需要這些庫

# 最佳化 release profile 配置
[profile.release]
# 完全優化：最高等級性能優化
opt-level = 3
# 啟用 LTO (Link Time Optimization)：跨 crate 優化
lto = "fat"
# 單一代碼生成單元：最大化優化但增加編譯時間
codegen-units = 1
# 關閉調試信息：減少二進制大小
debug = false
# 開啟 panic 展開優化
panic = "abort"
# 啟用增量編譯緩存
incremental = false

# 優化所有依賴項：即使在 dev 構建中也優化依賴項
[profile.dev.package."*"]
opt-level = 2

# 針對不同構建模式的優化配置
[profile.release-fast]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 4
incremental = true
debug = false

# 為分發版本優化的配置
[profile.dist]
inherits = "release"
opt-level = "s"  # 優化二進制大小
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"  # 移除調試符號
